fix: change overflow for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -370,6 +370,7 @@ textarea {
 
 @media screen and (max-width: 768px) {
   body {
+    overflow-y: auto;
     overflow-x: hidden;
   }
 
